--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.5.10 M
 
+2019-3-1 Will
+* Added endian check for PadSynth export.
+* Revised ALSA endian check.
+
 2019-2-28 Will
 * Added data block saving to Filemanager
 * Revised PadSynth export.
