--- a/Changelog
+++ b/Changelog
@@ -4,6 +4,8 @@ yoshimi 1.5.10 M
 * Added endian check for PadSynth export.
 * Revised ALSA endian check.
 * Made (obvious) improvement to endian detection.
+* Moved gzipped saving from XMLwrapper to FileMgr.
+  This also fixed memory leak if saving failed.
 
 2019-2-28 Will
 * Added data block saving to Filemanager
