--- a/Changelog
+++ b/Changelog
@@ -1,12 +1,16 @@
 yoshimi 1.5.M
 
-2019-2-10 Will
+2019-3-12 Will
+* Waveform window now warns of lower voice edit.
+  Doesn't yet say which one!
+
+2019-3-10 Will
 * BugFix: Limits default wrong on DynFilter.
   System/Insert volumes reversed.
 * Set up label for lower voice oscillator warning.
   Not yet in use. Need to work out how.
 
-2019-2-8 Will
+2019-3-8 Will
 * Small improvement to CLI 'list' command.
 
 2019-3-4 Will.
