Initial conversion of LFO speed toint32_t

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.5.M
 
+2019-3-14 Will
+* Initial conversion of LFO speed toint32_t.
+
 2019-3-12 Will
 * Waveform window now warns of lower voice edit.
   Doesn't yet say which one!
