--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.5.M
 
+
+2019-3-16 Will
+* Effect change recognaises intstrument loads.
+
 2019-3-15 Will
 * LFO conversion done
   but CLI/GUI entries need improvenment.
