--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.5.M
 
+2019-3-19 Will
+* Most effect wanings now correct.
+  Still incorrect when loading :(
+
 2019-3-18 Will
 * More work on effect warnings.
   Still more to do
