--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.5.M
 
+2019-3-20 Will
+* Dynfilter insert done for local changes.
+  No idea how to set for patch loads :(
+
 2019-3-19 Will
 * Most effect warnings now correct.
   Still incorrect when loading :(
