--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.5.M
 
+2019-3-27 Will
+* Completed GUi updates for effect controls.
+
 2019-3-26 Will
 * BugFix: MIDI-learn not learning correct effect numbers
   GUI still not updated correctly yet.
