--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.5.M
 
+2019-4-1 Will
+* Added more informative tooltips.
+
 2019-3-27 Will
 * Completed GUi updates for effect controls.
 * Implemented master mono/stero switch.
