--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.5.M
 
+2019-4-3 Will
+* Converted Bank root control to MSB, LSB, OFF.
+* Undated docs.
+
 2019-4-1 Will
 * Added more informative tooltips.
 
