--- a/dev_notes/ToDo.txt
+++ b/dev_notes/ToDo.txt
@@ -10,6 +10,8 @@ Seems to be unused.
 
 Revise GUI voice list related to voice editor.
 
+Complete effect change warning for dynfitter insert.
+
 Sort out bank properly.
 
 CLI sys/ins updates wrong.
