--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,8 @@ yoshimi 1.5.M
 2019-4-6 Will
 * Disable GUI Analog Phaser controls when not set.
 * Revised Gui Layout to make this more obvious.
+* Further adustments - Phase disabled for Analog.
+* Re-ordered controls.
 
 2019-4-3 Will
 * Converted Bank root control to MSB, LSB, OFF.
