--- a/Changelog
+++ b/Changelog
@@ -5,6 +5,7 @@ yoshimi 1.5.M
 * Revised Gui Layout to make this more obvious.
 * Further adustments - Phase disabled for Analog.
 * Re-ordered controls.
+* L/R also disabled for Analog.
 
 2019-4-3 Will
 * Converted Bank root control to MSB, LSB, OFF.
