--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,14 @@
 yoshimi 1.5.M
 
+2019-4-14 Will
+* CLI part common control text copied to sections.
+  Being separate was confusing in some situations
+  and not particularly helpful generally.
+
+2019-4-11 Will
+* Fix 'A' note range as 329 to 660 Hz.
+* Added note info to /doc
+
 2019-4-9 Will
 * BugFix: CLI not setting effect numbers.
 * Added named effects controls replacing some numbers.
