--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.5.M
 
+2019-4-20 Will
+* BugFix: Adnote voice modulator damping incorrect.
+* Further work on auto single main instance.
+
 2019-4-19 Will
 * Implemented separate L/R part VU metering.
 * Removed some direct calls from VU GUI to synth.
