--- a/Changelog
+++ b/Changelog
@@ -4,6 +4,7 @@ yoshimi 1.5.M
 * Set placeholders for new type/source bytes.
 * Applied warning patch in main.cpp from Hermann.
 * Doc updates
+* Click on mixer part VU now cleared limit warning.
 
 2019-4-20 Will
 * BugFix: Adnote voice modulator damping incorrect.
