--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,9 @@
 yoshimi 1.5.M
 
 2019-4-23 Will
+* Added tooltips to master and part VU meters.
+
+2019-4-23 Will
 * Removed redundant 'detach' thread element.
 * Started entering 'std::' not 'using namespace'.
   This removes potential ambiguities, especially
