--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,10 @@
 yoshimi 1.5.M
 
-2019-4-23 Will
+2019-4-25 Will
+* Added PART_POLIPONY to globals
+  It had been defined numerically in two places!
+
+2019-4-24 Will
 * Added tooltips to master and part VU meters.
 * Single main instance now seems correct.
   A first start double-click will still start two
