--- a/Changelog
+++ b/Changelog
@@ -6,6 +6,7 @@ yoshimi 1.5.M
 * Added PART_POLY, PART_MONO, PART_LEGATO, MIDI_LEGATO
   MIDI_NOT_LEGATO to globals
   These had been set numerically in multiple locations.
+* More transfers from 'using namespace' to 'std::'
 
 2019-4-24 Will
 * Added tooltips to master and part VU meters.
