Refined instance startup tests in main()

--- a/Changelog
+++ b/Changelog
@@ -5,6 +5,7 @@ yoshimi 1.5.M
   Also made some refinements to code allowing this
   to be hidden until certain it's safe.
 * BugFix: Crashes on some systems when opening the GUI.
+* Refined instance startup tests in main()
 
 2019-4-25 Will
 * Added PART_POLIPONY to globals
