--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,7 @@ yoshimi 1.5.M
 
 2019-5-1 Will
 * All Interface files have no 'using namespace std'
+* All MusicIO files have no 'using namespace std'
 
 2019-4-30 Will
 * Single master instance now switchable from GUI.
