Enumerated history lists. Improved history list internal structures

--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,8 @@ yoshimi 1.5.M
 
 2019-5-5 Will
 * Completed padSynth parameter conversions.
+* Enumerated history lists.
+* Improved history list internal structures.
 
 2019-5-4 Will
 * Added CLI access to spot noise.
