--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 1.5.11 rc1
 
+2019-5-7 Will
+* Further imprevements to instance behaviour.
+  Time delays are almost entirely due to GUI
+  slow startup. This has been an issurue for
+  a very long time.
 
 2019-5-6 Will
 * Improved new/multi instance behaviour.
