--- a/Changelog
+++ b/Changelog
@@ -1,10 +1,12 @@
-yoshimi 1.5.11 rc2
+yoshimi 1.5.11 rc3
 
 2019-5-8 Will
 * Trial of startup display
   Currently disabled.
 * Some cleanups.
 * Corrected previous changelog message.
+* Startup display now working.
+* Set version as 1.5.11 rc3
 
 2019-5-7 Will
 * Further improvements to instance behaviour.
