--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 1.5.11 M
 
+2019-5-16 Will
+* Added CLI access to extended modulator control.
+* Added CLI access to Spot noise.
+* Updated docs.
+
 
 2019-5-12 Will
 * Moved hidden filenames from globals to main.
