Some minor corrections to transferred controls

--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,9 @@
 yoshimi 1.5.11 M
 
 2019-5-18 Will
+* Some minor corrections to transferred controls.
+
+2019-5-18 Will
 * Low prio and Loopback transferred in Interchange.
   Copied across in CLI and GUI.
 * MIDI, CLI, GUI transfered from type to source.
