--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.5.11 M
 
+2019-5-21 Will
+* Fixed regression not muting when loading patch sets.
+* Resolved spurious EQ setting message when loading.
+
 2019-5-20 Will
 * GUI updates almost complete.
 * Corrected date of previous commit.
