--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.5.11 M
 
+2019-5-22 Will
+* BugFix: Midi CCs not updating GUI.
+
 2019-5-21 Will
 * Fixed regression not muting when loading patch sets.
 * Resolved spurious EQ setting message when loading.
