Output: new clean slate implementation of pull processing
Devise a common pull processing mechanism to be shared by all 3 output systems.
Prerequisites:
 - distinction between calculation buffer size and output buffer size
 - SynthEngine will only ever calculate in full buffersize increments
 - we always copy output from the engine buffer to output sink
 - we may retain some additional samples in the engine buffer,
   to be used on next pull
 - due to LV2, no prerequisites on the pull size.
   It may be variable, zero and not necessarily a power of two

The three output systems will have to implement the virtual function pushOutput(start, size)

Rationale: LV2 used to do its calculations in a markedly different way than the
other primary output systems (ALSA, Jack). I consider this a liability, since
there is no clear benefit from retaining such a different code path; generally
speaking the deviant calculation scheme of LV2 can not guarantee a better latency,
and it uses a complicate buffer reasignment scheme to the rather minor benefit of
calculating directly into the output buffers.

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,12 @@
 yoshimi 1.5.11 M
 
+2019-6-6 Hermann
+* Buffer-handling: use pull processing for sound output,
+  and let the SynthEngine always operate with a fixed,
+  configured calcualtion buffer size. This avoids sonic
+  changes due to dynamic buffer size changes, as could
+  happen with LV2, esp. with the Carla plugin host.
+
 2019-6-4 Will
 * Completed CLI bank slot deletions.
   Also integrated GUI controls.
