--- a/Changelog
+++ b/Changelog
@@ -1,7 +1,9 @@
-yoshimi 1.5.11 M
+yoshimi 1.5.11.3
 
 2019-5-27 Will
 * BugFix: Start message lockup only on Gnome or KDE
+* Fixed undefined integer type for BSD.
+* Set bugfix version as 1.5.11.3.
 
 2019-5-12 Will
 * Moved hidden filenames from globals to main.
