--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.5.11 M
 
+2019-5-29 Will
+* BugFix: Several bad integer types for BSD
+* BugFix: CLI not seeing MIDI program changes.
+
 2019-5-27 Will
 * BugFix: Start message lockup only on Gnome or KDE
 
