--- a/Changelog
+++ b/Changelog
@@ -7,6 +7,7 @@ yoshimi 1.5.11 M
   Load instrument from bank
   Set current root or bank
   Updated docs
+* Additional code and doc cleanups.
 
 2019-5-29 Will
 * BugFix: Several bad integer types for BSD
