--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,9 @@ yoshimi 1.5.11 M
 
 2019-6-3 Will
 * Applied modulation patch from Kristian.
+* BugFix: Message list clearing was too agressive.
+  This prevented state loads from including mide-learn
+  control names.
 
 2019-6-1 Will
 * Corrected ringbufer size calculation.
