--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.5.11 M
 
+2019-6-17 Will
+* BugFix: instances loading wrong default state on reset.
+* Refined FLTK locking in UI/MiscGui.cpp
+
 2019-6-16 Will
 * Unified XML and history types.
 
