--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 1.5.11 M
 
+2019-6-24 Will
+* Swapped menu entry Yoshimi/MIDI Learn ~ button-Reports.
+* Improved MIDI-Learn internal links.
+* Partially separated text replies from respondents.
+
 2019-6-22 Will
 * Clarifed system mute controls.
   Also added extra sanity checks.
